qmm019: fixbug UT: 127108

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -440,7 +440,7 @@
                                         </th>
                                         <td>
                                             <!--D11_21-->
-                                            <div class="label" data-bind="text: limitAmount"/>
+                                            <div class="label" data-bind="text: $vm.formatNumber(limitAmount())"/>
                                         </td>
                                     </tr>
                                     <tr>
@@ -493,13 +493,13 @@
                                         <td data-bind="with: errorRangeSetting">
                                             <div class="label range-setting">
                                                 <!--D11_27-->
-                                                <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(upperLimitSetting.rangeValue())"/>
                                                 <!--D11_28-->
                                                 <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--D11_29-->
-                                                <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(lowerLimitSetting.rangeValue())"/>
                                                 <!--D11_30-->
                                                 <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
@@ -515,13 +515,13 @@
                                         <td data-bind="with: alarmRangeSetting">
                                             <div class="label range-setting">
                                                 <!--D11_31-->
-                                                <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(upperLimitSetting.rangeValue())"/>
                                                 <!--D11_32-->
                                                 <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--D11_33-->
-                                                <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(lowerLimitSetting.rangeValue())"/>
                                                 <!--D11_34-->
                                                 <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
