--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
@@ -443,13 +443,13 @@
                                         <td data-bind="with: errorRangeSetting">
                                             <div class="label range-setting">
                                                 <!--E10_17-->
-                                                <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(upperLimitSetting.rangeValue())"/>
                                                 <!--E10_18-->
                                                 <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--E10_19-->
-                                                <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(lowerLimitSetting.rangeValue())"/>
                                                 <!--E10_20-->
                                                 <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
@@ -465,13 +465,13 @@
                                         <td data-bind="with: alarmRangeSetting">
                                             <div class="label range-setting">
                                                 <!--E10_21-->
-                                                <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(upperLimitSetting.rangeValue())"/>
                                                 <!--E10_22-->
                                                 <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--E10_23-->
-                                                <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
+                                                <span class="label" data-bind="text: $vm.formatNumber(lowerLimitSetting.rangeValue())"/>
                                                 <!--E10_24-->
                                                 <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
