DatNV: fix bug 126524

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
@@ -78,7 +78,7 @@
         </ul>
         <div class="divider"></div>
         <span>#{i18n.getText('QMM020_12')}</span>
-        <button>?</button>
+        <button tabindex="-1">?</button>
     </ui:define>
     <ui:define name="sidebar-content">
         <div id="tabpanel-1" role="tabpanel" data-bind = "with: viewmodelB">
