QMM020 fix bug IT 126896

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/j/index.xhtml
@@ -74,7 +74,7 @@
 										checked: transferMethod,
 										option: itemList()[0],
 										optionValue: 'code',
-										enable: isFirst,
+										enable: params().startYearMonth != 0,
 										optionText: 'name',
 										group: 'periodOption'}">
                         </div>
@@ -89,7 +89,7 @@
 										checked: transferMethod,
 										option: itemList()[1],
 										optionValue: 'code',
-										enable: isFirst,
+										enable: params().startYearMonth != 0,
 										optionText: 'name',
 										group: 'periodOption'}">
                         </div>
