DatNV: fix giãn dòng 126388

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -52,7 +52,7 @@
         <div class="fixed-flex-layout-right" style="margin-top: 20px;">
             <span id = "H3_1" style="margin-bottom: 15px;">#{i18n.getText('QMM020_46')}</span>
             <div id="text_Salary" class="control-group flex valign-center">
-                <pre tabindex="-1">#{i18n.getText('QMM020_18')}</pre>
+                <pre tabindex="-1" style="line-height: 1.8;">#{i18n.getText('QMM020_18')}</pre>
                 <span id="H3_3" style="padding-left: 30px">#{i18n.getText('QMM020_19')}</span>
             </div>
             <hr style="margin-bottom: 40px;"></hr>
