--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/l/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/l/index.xhtml
@@ -31,7 +31,7 @@
                 options: itemList,
                 optionsValue: 'id',
                 optionsText: 'name',
-                value: selectedId,
+                value: printSet,
                 enable: true}"></div>
         </div>
         <div id="functions-area-bottom">
